Prevent global field styles in user path

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-confirmation-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-confirmation-page.html.twig
@@ -1,35 +1,25 @@
-<section class="sectioned sectioned--content">
-    <div class="sectioned__inner">
-        <div class="container">
+<!-- Begin - heading -->
+<div class="sectioned__heading">
+    <h1 class="sectioned__heading__title">{{ 'Please confirm your order' | trans }}</h1>
+</div>
+<!-- End - heading -->
 
-            <!-- Begin - heading -->
-            <div class="sectioned__heading">
-                <h2 class="sectioned__heading__title">
-                    {{ 'Please confirm your order' | trans }}
-                </h2>
-            </div>
-            <!-- End - heading -->
+{# Begin - order #}
+{{ page['#order'] }}
+{# End - order #}
 
-            {# Begin - order #}
-            {{ page['#order'] }}
-            {# End - order #}
+<!-- Begin - buttons -->
+<div class="partial partial--actions">
+    <div class="partial__body">
 
-            <!-- Begin - buttons -->
-            <div class="partial partial--actions">
-                <div class="partial__body">
+        <a href="{{ page['#backLink'] }}" class="btn btn-default">
+            {{ 'Back to order' | trans }}
+        </a>
 
-                    <a href="{{ page['#backLink'] }}" class="btn btn-default">
-                        {{ 'Back to order' | trans }}
-                    </a>
+        <a href="{{ page['#paymentLink'] }}" class="btn btn-success">
+            {{ 'Proceed to payment' | trans }}
+        </a>
 
-                    <a href="{{ page['#paymentLink'] }}" class="btn btn-success">
-                        {{ 'Proceed to payment' | trans }}
-                    </a>
-
-                </div>
-            </div>
-            <!-- End - buttons -->
-
-        </div>
     </div>
-</section>
+</div>
+<!-- End - buttons -->
