Remove global styling, impacting .notify layout

--- a/docroot/themes/custom/site/src/styles/theme/components/_notify.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_notify.scss
@@ -126,7 +126,10 @@
   }
 
   .notify__highlighted {
+    display: flex;
+
     flex-shrink: 1;
+    align-items: center;
 
     min-height: 70px;
   }
