--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -45,17 +45,17 @@ view_mode ? view_mode|clean_class,
                             <div class="col-sm-6">
 
                                 {# Begin - headings #}
-                                {% if content.field_vih_course_heading or content.field_vih_course_subheading %}
+                                {% if node.field_vih_course_heading.value or node.field_vih_course_subheading.value %}
 
-                                    {% if content.field_vih_course_heading %}
-                                    <!-- Begin - heading -->
-                                    <div class="sectioned__heading">
-                                        <h2 class="sectioned__heading__title">{{ content.field_vih_course_heading.0 }}</h2>
-                                    </div>
-                                    <!-- End - heading -->
+                                    {% if node.field_vih_course_heading.value %}
+                                        <!-- Begin - heading -->
+                                        <div class="sectioned__heading">
+                                            <h2 class="sectioned__heading__title">{{ content.field_vih_course_heading.0 }}</h2>
+                                        </div>
+                                        <!-- End - heading -->
                                     {% endif %}
 
-                                    {% if content.field_vih_course_subheading %}
+                                    {% if node.field_vih_course_subheading.value %}
                                         <!-- Begin - subheading -->
                                         <div class="sectioned__subheading">
                                             <h3 class="sectioned__subheading__title heading-h4">{{ content.field_vih_course_subheading.0 }}</h3>
@@ -67,7 +67,7 @@ view_mode ? view_mode|clean_class,
                                 {# End - headings #}
 
                                 {# Begin - period #}
-                                {% if content.course_period_start or content.course_period_end %}
+                                {% if node.course_period_start.value or node.course_period_end.value %}
                                     <div class="boxy boxy--time-period">
                                         <div class="boxy__heading">
                                             <h2 class="boxy__heading__title heading-h4">{{ 'Course start' | trans }}</h2>
