Fix long course modal target ID

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-class-selection-radios.html.twig
@@ -19,7 +19,7 @@
             <!-- End - action -->
 
             {# Begin - modal #}
-            <div class="modal fade" id="class-modal-cp-{{ term.id }}" tabindex="-1" role="dialog">
+            <div class="modal fade" id="class-modal-{{ radios[delta]['#id'] }}" tabindex="-1" role="dialog">
                 <div class="modal-dialog modal-lg" role="document">
                     <div class="modal-content">
 
