--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--teaser.html.twig
@@ -1,36 +1,11 @@
-{#
-/**
- * @file
- * Default theme implementation to display a taxonomy term.
- *
- * Available variables:
- * - url: URL of the current term.
- * - name: Name of the current term.
- * - content: Items for the content of the term (fields and description).
- *   Use 'content' to print them all, or print a subset such as
- *   'content.description'. Use the following code to exclude the
- *   printing of a given child element:
- *   @code
- *   {{ content|without('description') }}
- *   @endcode
- * - attributes: HTML attributes for the wrapper.
- * - page: Flag for the full page state.
- * - term: The taxonomy term entity, including:
- *   - id: The ID of the taxonomy term.
- *   - bundle: Machine name of the current vocabulary.
- * - view_mode: View mode, e.g. 'full', 'teaser', etc.
- *
- * @see template_preprocess_taxonomy_term()
- *
- * @ingroup themeable
- */
-#}
-<div{{ attributes }}>
-    {#{{ title_prefix }}#}
-    {#{% if not page %}#}
-        {#<h2><a href="{{ url }}">{{ name }}</a></h2>#}
-    {#{% endif %}#}
-    {#{{ title_suffix }}#}
-    {#{{ content }}#}
-    {{ content.field_vih_class_image }}
-</div>
+<a href="{{ url }}" {{ attributes.addClass('element-wrapper-link', 'entity-teaser', 'entity-teaser--class') }} style="background-image: url({{ term.field_vih_class_image.entity.fileuri | image_style(content.field_vih_class_image[0]['#image_style']) }});">
+    <div class="entity-teaser__inner">
+
+        {# Begin - overlay #}
+        <div class="entity-teaser__image__overlay entity-teaser__image__overlay--{{ term.field_vih_class_package_color.value }}">
+            {{ name }}
+        </div>
+        {# End - overlay #}
+
+    </div>
+</a>
