Collection of changes in meeting

--- a/docroot/themes/custom/site/src/styles/theme/components/sectioned/_sectioned.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/sectioned/_sectioned.scss
@@ -26,9 +26,10 @@ $sectioned-subheading-title-color: $text-color-light;
 
 // Heading
 .sectioned__heading {
+  margin-bottom: $grid-gutter-width;
 
   + .sectioned__subheading {
-    margin-top: 10px;
+    margin-top: (0 - ($grid-gutter-width - 10px));
   }
 }
 .sectioned__heading__title {
