--- a/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
@@ -119,6 +119,6 @@ view_mode ? view_mode|clean_class,
     </div>
   </div>
   <div class="row paragraphs">
-    {{ content.field_class_package_paragraph }}
+    {{ content.field_paragraphs }}
   </div>
 </article>
