--- a/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
@@ -47,9 +47,7 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
 
-                    <h3 class="modal-title heading-h1">
-                        {{ name }}
-                    </h3>
+                    <h3 class="modal-title heading-h1">{{ name }}</h3>
                 </div>
                 {# End - header #}
 
